--- a/Branding/css/common.less
+++ b/Branding/css/common.less
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Titillium+Web:400,700');
+@import url('https://fonts.googleapis.com/css?family=Titillium+Web:200,400,700');
 
 @dami-charcoal-100: #b1bac2;
 @dami-charcoal-200: #a3acb3;
@@ -225,7 +225,7 @@ a:hover, a:active {
 /* nav */
 nav ul {
 	position: fixed;
-	top:63px;
+	top: 72px;
 	width: 160px;
 	padding: 0;
 }
@@ -247,9 +247,10 @@ a.active {
 /* nav */
 
 h1.title {
-	margin: 16px 0 0 0;
+	margin: 20px 0 0 -8px;
 	padding: 0;
-	font-weight: 700;
+	font-size: 72px;
+	font-weight: 200;
 }
 
 section { margin-bottom:36px; }
