--- a/Branding/css/common.less
+++ b/Branding/css/common.less
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Titillium+Web:200,400,700');
+// out: common.css
+
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700');
 
 @dami-charcoal-100: #b1bac2;
 @dami-charcoal-200: #a3acb3;
@@ -197,9 +199,9 @@
 @dami-mint-1300: #001518;
 
 * { box-sizing: border-box; }
-html { -webkit-font-smoothing: antialiased; } 
+html { -webkit-font-smoothing: antialiased; }
 body {
-	font-family: 'Titillium Web', sans-serif;
+	font-family: 'Work Sans', sans-serif;
 	font-weight: 400;
 	font-size:14px;
 	color:#939da5;
@@ -210,12 +212,12 @@ p, h5 {
 	letter-spacing: -0.03em;
 	line-height: 160%;
 }
-h1, h2, h3, h4, h5 { font-family: "Titillium Web", sans-serif; }
+h1, h2, h3, h4, h5 { font-family: "Work Sans", sans-serif; }
 h1, h5 { margin-bottom:0; color:#262e33; font-weight: 700; }
 h3, h4 { color:#262e33;font-weight: 700; }
 a:link, a:visited {
 	color: #59626a;
-	text-decoration: none; 
+	text-decoration: none;
 }
 
 a:hover, a:active {
@@ -234,7 +236,7 @@ nav ul li {
 	color: #59626a;
 	padding:12px 0;
 	list-style: none;
-	font-family: 'Titillium Web', sans-serif;
+	font-family: 'Work Sans', sans-serif;
 	font-weight: 700;
 	display: block;
 	border-bottom:1px solid #e6ebef;
@@ -276,7 +278,7 @@ section { margin-bottom:36px; }
 .footer {
 	height: 180px;
 	font-size:12px;
-	font-family: "europa", sans-serif;
+	font-family: "Work Sans", sans-serif;
 	border-top : 1px solid #ccd5db;
 	margin-top:72px;
 	margin-bottom:36px;
@@ -314,7 +316,7 @@ section { margin-bottom:36px; }
 	padding:12px 16px 14px 16px;
 	text-align: center;
 	letter-spacing: -0.05em;
-} 
+}
 
 .btn-download:hover {
 	border: 1px solid #ccd5db;
@@ -383,7 +385,7 @@ section { margin-bottom:36px; }
 .color-box-header {
 	height: 86px;
 	padding: 14px;
-	font-family: "europa";
+	font-family: "Work Sans";
 	font-size:16px;
 	font-weight: 700;
 	border-radius: 4px 4px 0 0;
@@ -396,7 +398,7 @@ section { margin-bottom:36px; }
 
 .color-box {
 	padding:14px;
-	font-family: "europa";
+	font-family: "Work Sans";
 }
 
 .color-box:after {
