--- a/css/common.less
+++ b/css/common.less
@@ -1,535 +1,98 @@
-@import url(icon.less);
-@import url(logo.less);
-@import url(https://cdn.rawgit.com/openhiun/hangul/14c0f6faa2941116bb53001d6a7dcd5e82300c3f/nanumbarungothic.css);
-@import url(http://fonts.googleapis.com/earlyaccess/kopubbatang.css);
+// out: common.CSS
+
+@import url('wantone.less');
+
+* {
+	box-sizing: border-box;
+}
 
 body {
-	color: #969ea4;
-	font-family: sans-serif;
-	font-weight: 500;
-	letter-spacing: -0.01em;
-	line-height: 160%;
-	word-break: keep-all;
+	font-family: "Titillium Web";
+	font-size: 14px;
+	margin: 0;
+	padding: 0;
 }
 
-a,
-a:hover,
-a:active,
-a:visited {
-	color: inherit;
-	text-decoration: none;
+.title-wrap {
+	margin: 24px;
 }
 
-button {
-	outline: none;
+.title {
+	color: #122032;
 }
 
-/*-- common --*/
-.divider { width: 100%; height: 1px; border-top: 1px solid #efefef; }
-.divider-sub { width: 100%; height: 1px; margin: 48px 0; border-top: 1px solid #efefef; }
+.share {
+	margin: 36px 0 0 0;
+	padding: 0;
 
-.concept-hero { background-image: url(../images/introduce-back.jpg); }
-.contact-hero { background-image: url(../images/contact-back.jpg); }
-.intro-hero { background-image: url(../images/introduce-back.jpg); }
-.cafe-hero { background-image: url(../images/cafe-back.jpg); }
-.hero-sub-shop { background-image: url(../images/hero-sub-shop.jpg); }
-.hero-sub-brand { background-image: url(../images/hero-sub-brand.jpg); }
-.hero-sub-bakery { background-image: url(../images/hero-sub-bakery.jpg); }
-.hero-sub-contact { background-image: url(../images/hero-sub-contact.jpg); }
-.hero-sub-contact-1 { background-image: url('../images/hero-sub-contact-1.jpg'); height: 360px; }
-
-.btn-orange {
-	color: #fff;
-	background-color: #f24609;
-	border: 0;
-	border-radius: 30px;
-	padding: 16px 20px;
-}
-
-.btn-orange:hover {
-	color: #fff;
-	background-color: #c93500;
-	border: 0;
-	border-radius: 30px;
-	padding: 16px 20px;
-}
-
-.btn-wrap {
-	margin-top: 20px;
-	text-align: center;
-}
-
-.block {
-	padding: 58px 0;
-
-	.header,
-	.header-sub,
-	.description,
-	h3.paragraph-header {
-		text-align: center;
-	}
-
-	.header {
-		color: #44494c;
-		font-size: 36px;
-		font-weight: 600;
-	}
-
-	.header-sub {
-		color: #7a8187;
-		font-size: 16px;
-		margin: 8px 0 40px 0;
-	}
-
-	h3.paragraph-header {
-		color: #333;
-		font-size: 36px;
-		font-weight: 300;
-		font-family: "Kopub Batang";
-		margin-top: 0;
-		margin-bottom: 40px;
-		line-height: 140%;
-		z-index: 5;
-		letter-spacing: -0.04em;
-	}
-
-	/*--
-	h3.paragraph-header:before {
-		content: "'";
-		display: inline;
-		width: 48px;
-		height: 48px;
-		margin-right: -8px;
-		background-image: url(../images/q-start.png);
-		background-repeat: no-repeat;
-		background-position: center center;
-		-webkit-background-size: 48px;
-		   -moz-background-size: 48px;
-			 -o-background-size: 48px;
-				background-size: 48px;
-		z-index: 1;
-	}
-
-	h3.paragraph-header:after {
-		content: "'";
-		display: inline;
-		width: 48px;
-		height: 64px;
-		margin-left: -8px;
-		background-image: url(../images/q-end.png);
-		background-repeat: no-repeat;
-		background-position: center 16px;
-		-webkit-background-size: 48px;
-		   -moz-background-size: 48px;
-			 -o-background-size: 48px;
-				background-size: 48px;
-		z-index: 1;
-	}
-  --*/
-
-	p {
-		margin-bottom: 36px;
-		font-size: 15px;
-		line-height: 180%;
-		text-align: center;
-	}
-
-	p:last-child {
-		margin-bottom: 0;
-	}
-}
-
-.background-full {
-	background-position: center center;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-}
-
-.navbar {
-	margin-bottom: 0;
-}
-
-.navbar-inverse {
-	background-color: rgba(0,0,0,0.8) !important;
-	border: 0 !important;
-}
-
-/*-- hero --*/
-
-.intro-header {
-	width: 100%;
-	height: 800px;
-	color: #fff;
-
-	.logo {
-		width: 30px;
-		margin: 0 auto 24px auto;
-		padding-top: 24px;
-	}
-
-	.nav-custom {
+	li {
 		display: inline-block;
-		width: 100%;
 		list-style: none;
-		margin: 0 auto;
-		padding: 0;
-		text-align: center;
-
-		li {
-			display: inline-block;
-			margin: 0 14px;
-			padding-right: 30px;
-			border-right: 1px solid rgba(255,255,255,0.1);
-		}
-
-		li:last-child {
-			margin: 0 0 0 14px;
-			padding-right: 0;
-			border-right: none;
-		}
-	}
-
-	h1 {
-		color: #fff;
-		font-weight: 100;
-		font-size: 86px;
-		margin-top: 114px;
-	}
-
-	h2 {
-		color: #fff;
-		font-size: 20px;
-		margin-top: 24px;
-		line-height: 170%;
-		font-weight: 300;
-	}
-
-	.btn-more-info {
-		width: 100%;
-		padding-top: 200px;
-		text-align: center;
-	}
-
-	.arrow-bottom {
-		display: block;
-		width: 48px;
-		margin: 0 auto;
-		padding-top: 16px;
 	}
 }
 
-.brand-block {
-	.brand-item {
-		height: 190px;
-		padding: 24px;
+.chips {
+	width: 100%;
+	padding: 24px;
+	background-color: #f5f5f5;
+}
+
+.description {
+	color: @gray-510;
+	margin: 86px 0 0 0;
+}
+
+.color-tone {
+	min-width: 1600px;
+	margin: 24px 0 48px 0;
+	vertical-align: top;
+
+	.color-block {
+		display: inline-block;
+		vertical-align: top;
+	}
+
+	.color-chip {
+		width: 150px;
+		height: 180px;
+		margin-right: 16px;
+		margin-bottom: 24px;
+		background-color: #fff;
+		-webkit-box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.05);
+  	   -moz-box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.05);
+			    	box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.05);
+
+		.color-box-main {
+			width: 150px;
+			height: 150px;
+			padding: 16px;
+		}
+
+		.color-box-sub {
+			display: inline-block;
+			float: left;
+			width: 30px;
+			height: 30px;
+			padding: 0;
+		}
+
+		.step-100 { opacity: 1; }
+		.step-070 { opacity: 0.7; }
+		.step-050 { opacity: 0.5; }
+		.step-030 { opacity: 0.3; }
+		.step-000 { opacity: 0; }
+	}
+
+	.color-chip + .empty {
+		display: inline-block;
+		width: 150px;
+		height: 180px;
 		border: 1px solid #efefef;
 	}
-
-	h3.header {
-		height: 180px;
-		margin: 0 auto 14px auto;
-		padding-top: 76px;
-		padding-bottom: 14px;
-		border-bottom: 1px solid #e4e4e4;
-		background-repeat: no-repeat;
-		background-size: 72px 72px;
-		background-position: top center;
-		text-align: center;
-		line-height: 120%;
-	}
-
-	.brand-list-wrap {
-		display: block;
-		list-style: none;
-		margin-left: -15px;
-		margin-right: -15px;
-		padding: 0;
-
-		li {
-			display: inline-block;
-			position: relative;
-			float: left;
-			width: 25%;
-			height: 200px;
-			margin-bottom: 25px;
-			padding-left: 15px;
-			padding-right: 15px;
-			box-sizing: border-box;
-
-			.brand-list-item {
-				width: 100%;
-				height: 200px;
-				border: 1px solid #e3e3e3;
-				padding: 140px 16px 16px 16px;
-				text-align: center;
-				background-repeat: no-repeat;
-				background-position: center center;
-				-webkit-background-size: 130px;
-				   -moz-background-size: 130px;
-					 -o-background-size: 130px;
-						background-size: 130px;
-				opacity: 0.3;
-				-webkit-transition: opacity .25s ease-in-out;
-				   -moz-transition: opacity .25s ease-in-out;
-					-ms-transition: opacity .25s ease-in-out;
-					 -o-transition: opacity .25s ease-in-out;
-						transition: opacity .25s ease-in-out;
-			}
-
-			.brand-list-item:hover {
-				opacity: 0.9;
-			}
-		}
-	}
-
-	.brand-list-wrap:after {
-		display: block;
-		content: "";
-		clear:both;
-	}
 }
 
-.cafe-block {
-	h2.header {
-		color: #fff;
-	}
-
-	h3.header-sub {
-		color: #bfc8cf;
-	}
-
-	p {
-		color: #fff;
-	}
-}
-
-/* --.news-block {
-	.article-item {
-		margin-bottom: 24px;
-		padding-bottom: 24px;
-		border-bottom: 1px solid #e4e4e4;
-
-		.title {
-			color: #313231;
-			font-size: 20px;
-			font-weight: 800;
-		}
-
-		.date {
-			display: block;
-			color: #A8A8A8;
-			font-size: 13px;
-			margin-bottom: 14px;
-		}
-
-		p {
-			color: #A8A8A8;
-			font-size: 13px;
-		}
-
-		.feature-image {
-			height: 194px;
-			padding: 24px;
-			border: 1px solid #efefef;
-		}
-	}
-} --*/
-
-.contact-block {
-	color: #fff;
-	width: 100%;
-	padding: 40px 0;
-	background-color: #353535;
-
-	.header {
-		color: #fff;
-	}
-
-	.header-sub {
-		color: #fff;
-	}
-
-	.contact-item {
-		font-size: 30px;
-		font-weight: 100;
-		margin-bottom: 40px;
-		line-height: 100%;
-
-		strong {
-			display: block;
-			margin-bottom: 4px;
-			font-size: 16px;
-		}
-	}
-}
-
-.opening-time-block {
-	color: #fff;
-	width: 100%;
-	height: 200px;
-	padding: 40px 0;
-	background-color: #141313;
-	border-bottom: 1px solid #242323;
-
-	.opening-time-item {
-		strong {
-			display: block;
-			font-size: 16px;
-			margin-bottom: 16px;
-		}
-	}
-}
-
-/*-- sub header --*/
-.sub-title {
-	color: #fff;
-	text-align: center;
-	height: 400px;
-
-	h1 {
-		margin-top: 108px;
-		font-weight: 200;
-		font-size: 48px;
-		word-break: keep-all;
-	}
-
-	h2 {
-		font-size: 20px;
-		line-height: 170%;
-		font-weight: 300;
-		margin: 0;
-	}
-}
-
-footer.footer-block {
-	color: #fff;
-	width: 100%;
-	padding: 40px 0;
-	background-color: #141313;
-}
-
-
-
-@media screen and (max-width: 767px) {
-	.intro-header {
-		height: 500px;
-
-		.nav-custom {
-			li {
-				font-size: 14px;
-				margin: 0 4px;
-				padding-right: 9px;
-				border-right: 1px solid rgba(255,255,255,0.1);
-			}
-
-			li:last-child {
-				margin: 0 0 0 3px;
-			}
-		}
-
-		h1 {
-			font-size: 48px;
-			margin-top: 86px;
-		}
-
-		h2 {
-			font-size: 16px;
-			margin-top: 24px;
-		}
-
-		.btn-more-info {
-			padding-top: 68px;
-			text-align: center;
-		}
-	}
-
-	.block {
-		padding: 25px 0;
-
-		.header {
-			font-size: 30px;
-		}
-
-		.header-sub {
-			color: #7a8187;
-			font-size: 15px;
-			margin: 8px 0 24px 0;
-		}
-
-		h3.paragraph-header {
-			font-size: 24px;
-		}
-
-		p {
-			margin-bottom: 24px;
-			font-size: 13px;
-		}
-	}
-
-	.sub-title {
-		color: #fff;
-		text-align: center;
-		height: 360px;
-
-		h1 {
-			margin-top: 68px;
-			font-weight: 200;
-			font-size: 36px;
-		}
-
-		h2 {
-			font-size: 16px;
-			line-height: 170%;
-			font-weight: 300;
-			margin: 0;
-		}
-	}
-
-	.contact-block {
-		padding: 25px 0;
-
-		.header-sub {
-			color: #fff;
-		}
-
-		.contact-item {
-			font-size: 24px;
-
-			strong {
-				font-size: 15px;
-			}
-		}
-	}
-
-	.brand-block {
-		.brand-list-wrap {
-			li {
-				width: 50%;
-				height: 90px;
-
-				.brand-list-item {
-					width: 100%;
-					height: 100px;
-					padding: 40px 16px 16px 16px;
-					-webkit-background-size: 80px;
-					   -moz-background-size: 80px;
-						 -o-background-size: 80px;
-							background-size: 80px;
-				}
-			}
-		}
-	}
-}
-
-@media screen and (min-width: 768px) and (max-width: 990px) {
-	.intro-header {
-		height: 600px;
-
-		.btn-more-info {
-			padding-top: 48px;
-			text-align: center;
-		}
-	}
+.footer {
+	padding: 24px 24px 68px 24px;
+	font-size: 9px;
+	border-top: 1px solid #efefef;
 }
