--- a/css/common.less
+++ b/css/common.less
@@ -40,6 +40,15 @@ body {
 .description {
 	color: @gray-510;
 	margin: 86px 0 0 0;
+
+	a {
+		color: @blue-410;
+		text-decoration: none;
+	}
+
+	a:hover {
+		color: @red-810;
+	}
 }
 
 .color-tone {
