--- a/css/common.less
+++ b/css/common.less
@@ -22,7 +22,7 @@ body {
 }
 
 .share {
-	margin: 36px 0 0 0;
+	margin: 16px 0 36px 0;
 	padding: 0;
 
 	li {
@@ -33,7 +33,7 @@ body {
 
 .chips {
 	width: 100%;
-	padding: 24px;
+	padding: 4px 24px 24px 24px;
 	background-color: #f5f5f5;
 }
 
@@ -52,9 +52,10 @@ body {
 }
 
 .color-tone {
-	min-width: 1600px;
+	width: 100%;
 	margin: 24px 0 48px 0;
 	vertical-align: top;
+	overflow-y: auto;
 
 	.color-block {
 		display: inline-block;
@@ -70,6 +71,13 @@ body {
 		-webkit-box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.05);
   	   -moz-box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.05);
 			    	box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.05);
+
+		.color-name {
+			margin: 0;
+			padding: 0;
+			font-size: 16px;
+			font-weight: 600;
+		}
 
 		.color-box-main {
 			width: 150px;
@@ -102,6 +110,10 @@ body {
 
 .footer {
 	padding: 24px 24px 68px 24px;
-	font-size: 9px;
+	font-size: 12px;
 	border-top: 1px solid #efefef;
+
+	.thanksto {
+		color: #9f9f9f;
+	}
 }
