--- a/css/common.less
+++ b/css/common.less
@@ -55,11 +55,15 @@ body {
 	width: 100%;
 	margin: 24px 0 48px 0;
 	vertical-align: top;
-	overflow-y: auto;
+	transform: translateZ(0);
+	position: relative;
+	z-index: 10;
 
 	.color-block {
 		display: inline-block;
 		vertical-align: top;
+		transition: all 0.3s ease;
+		border-radius: 8px;
 	}
 
 	.color-chip {
@@ -71,6 +75,7 @@ body {
 		-webkit-box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.05);
   	   -moz-box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.05);
 			    	box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.05);
+		border: 0;
 
 		.color-name {
 			margin: 0;
@@ -98,6 +103,13 @@ body {
 		.step-050 { opacity: 0.5; }
 		.step-030 { opacity: 0.3; }
 		.step-000 { opacity: 0; }
+	}
+
+	.color-block:hover {
+		    -ms-transform: scale(1.12); /* IE 9 */
+	  -webkit-transform: scale(1.12); /* Safari 3-8 */
+	          transform: scale(1.12);
+		z-index: 999;
 	}
 
 	.color-chip + .empty {
