--- a/css/wantone.less
+++ b/css/wantone.less
@@ -77,6 +77,7 @@
 @purple-610 : #C53878;
 @purple-710 : #9F81B7;
 @purple-720 : #DE82B4;
+@purple-730 : #F761A6;
 @purple-810 : #D694A8;
 .purple-210 { color: #fff; background-color: @purple-210; }
 .purple-310 { color: #fff; background-color: @purple-310; }
@@ -88,6 +89,7 @@
 .purple-610 { color: #fff; background-color: @purple-610; }
 .purple-710 { color: #fff; background-color: @purple-710; }
 .purple-720 { color: #fff; background-color: @purple-720; }
+.purple-730 { color: #fff; background-color: @purple-730; }
 .purple-810 { color: #fff; background-color: @purple-810; }
 
 @green-210 : #173024;
