--- a/css/wantone.css
+++ b/css/wantone.css
@@ -162,6 +162,10 @@
   color: #fff;
   background-color: #DE82B4;
 }
+.purple-730 {
+  color: #fff;
+  background-color: #F761A6;
+}
 .purple-810 {
   color: #fff;
   background-color: #D694A8;
