--- a/css/common.css
+++ b/css/common.css
@@ -324,7 +324,8 @@ body {
 .color-tone .color-chip {
   width: 150px;
   height: 180px;
-  margin-right: 16px;
+  margin-right: 8px;
+  margin-left: 8px;
   margin-bottom: 24px;
   background-color: #fff;
   -webkit-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.05);
@@ -386,4 +387,28 @@ body {
 }
 .footer .thanksto {
   color: #9f9f9f;
+}
+@media screen and (max-width: 600px) {
+  .color-tone .color-chip {
+    width: 120px;
+    height: 144px;
+  }
+  .color-tone .color-chip .color-name {
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+    font-weight: 600;
+  }
+  .color-tone .color-chip .color-box-main {
+    width: 120px;
+    height: 120px;
+    padding: 16px;
+  }
+  .color-tone .color-chip .color-box-sub {
+    display: inline-block;
+    float: left;
+    width: 24px;
+    height: 24px;
+    padding: 0;
+  }
 }
