--- a/css/common.less
+++ b/css/common.less
@@ -14,7 +14,7 @@ body {
 }
 
 .title-wrap {
-	margin: 24px;
+	margin: 32px;
 }
 
 .title {
@@ -56,10 +56,15 @@ body {
 .color-tone {
 	width: 100%;
 	margin: 24px 0 48px 0;
+	padding: 0;
 	vertical-align: top;
 	transform: translateZ(0);
 	position: relative;
 	z-index: 10;
+
+	h3 {
+		margin: 0 8px 16px 8px;
+	}
 
 	.color-block {
 		display: inline-block;
