--- a/css/webchips_mungyukim.less
+++ b/css/webchips_mungyukim.less
@@ -1,15 +1,15 @@
-// out: wantone.css
+// out: webchips_mungyukim.css
 
 @import url('https://fonts.googleapis.com/css?family=Titillium+Web:400,600');
 
-@gray-110: #141311;
-@gray-310: #2E3030;
-@gray-510: #3D3F3F;
-@gray-520: #434036;
-@gray-710: #818281;
-@gray-720: #76776F;
-@gray-810: #BAA99F;
-@gray-820: #DAD3C7;
+@gray-110 : #141311;
+@gray-310 : #2E3030;
+@gray-510 : #3D3F3F;
+@gray-520 : #434036;
+@gray-710 : #818281;
+@gray-720 : #76776F;
+@gray-810 : #BAA99F;
+@gray-820 : #DAD3C7;
 .gray-110 { color: #fff; background-color: @gray-110; }
 .gray-310 { color: #fff; background-color: @gray-310; }
 .gray-510 { color: #fff; background-color: @gray-510; }
@@ -19,18 +19,18 @@
 .gray-810 { color: #fff; background-color: @gray-810; }
 .gray-820 { background-color: @gray-820; }
 
-@blue-210: #122032;
-@blue-410: #02275B;
-@blue-510: #00348C;
-@blue-610: #006BAE;
-@blue-620: #017C7C;
-@blue-630: #4E6278;
-@blue-710: #3C75AA;
-@blue-720: #148BA8;
-@blue-730: #1095B6;
-@blue-740: #4186A2;
-@blue-810: #69A1D2;
-@blue-910: #B3D9CD;
+@blue-210 : #122032;
+@blue-410 : #02275B;
+@blue-510 : #00348C;
+@blue-610 : #006BAE;
+@blue-620 : #017C7C;
+@blue-630 : #4E6278;
+@blue-710 : #3C75AA;
+@blue-720 : #148BA8;
+@blue-730 : #1095B6;
+@blue-740 : #4186A2;
+@blue-810 : #69A1D2;
+@blue-910 : #B3D9CD;
 .blue-210 { color: #fff; background-color: @blue-210; }
 .blue-410 { color: #fff; background-color: @blue-410; }
 .blue-510 { color: #fff; background-color: @blue-510; }
@@ -44,17 +44,17 @@
 .blue-810 { color: #fff; background-color: @blue-810; }
 .blue-910 { color: #fff; background-color: @blue-910; }
 
-@red-310: #970F15;
-@red-410: #B11717;
-@red-510: #D24F08;
-@red-610: #F52711;
-@red-710: #ED5F16;
-@red-720: #EC7D17;
-@red-810: #FAA20E;
-@red-820: #EBBB1E;
-@red-830: #D2B20A;
-@red-910: #EDCC71;
-@red-920: #EFD765;
+@red-310 : #970F15;
+@red-410 : #B11717;
+@red-510 : #D24F08;
+@red-610 : #F52711;
+@red-710 : #ED5F16;
+@red-720 : #EC7D17;
+@red-810 : #FAA20E;
+@red-820 : #EBBB1E;
+@red-830 : #D2B20A;
+@red-910 : #EDCC71;
+@red-920 : #EFD765;
 .red-310 { color: #fff; background-color: @red-310; }
 .red-410 { color: #fff; background-color: @red-410; }
 .red-510 { color: #fff; background-color: @red-510; }
