--- a/css/webchips_mungyukim.less
+++ b/css/webchips_mungyukim.less
@@ -10,6 +10,8 @@
 @gray-720 : #76776F;
 @gray-810 : #BAA99F;
 @gray-820 : #DAD3C7;
+@gray-830 : #DBE0E4;
+@gray-910 : #E9ECEE;
 .gray-110 { color: #fff; background-color: @gray-110; }
 .gray-310 { color: #fff; background-color: @gray-310; }
 .gray-510 { color: #fff; background-color: @gray-510; }
@@ -18,6 +20,8 @@
 .gray-720 { color: #fff; background-color: @gray-720; }
 .gray-810 { color: #fff; background-color: @gray-810; }
 .gray-820 { background-color: @gray-820; }
+.gray-830 { background-color: @gray-830; }
+.gray-910 { background-color: @gray-910; }
 
 @blue-210 : #122032;
 @blue-410 : #02275B;
@@ -48,6 +52,7 @@
 @red-410 : #B11717;
 @red-510 : #D24F08;
 @red-610 : #F52711;
+@red-620 : #F94E36;
 @red-710 : #ED5F16;
 @red-720 : #EC7D17;
 @red-810 : #FAA20E;
@@ -59,6 +64,7 @@
 .red-410 { color: #fff; background-color: @red-410; }
 .red-510 { color: #fff; background-color: @red-510; }
 .red-610 { color: #fff; background-color: @red-610; }
+.red-620 { color: #fff; background-color: @red-620; }
 .red-710 { color: #fff; background-color: @red-710; }
 .red-720 { color: #fff; background-color: @red-720; }
 .red-810 { color: #fff; background-color: @red-810; }
