--- a/css/webchips_mungyukim.css
+++ b/css/webchips_mungyukim.css
@@ -212,6 +212,10 @@
   color: #fff;
   background-color: #8DAB28;
 }
+.green-730 {
+  color: #fff;
+  background-color: #35B37E;
+}
 .green-810 {
   color: #fff;
   background-color: #08D34A;
