--- a/css/webchips_mungyukim.less
+++ b/css/webchips_mungyukim.less
@@ -106,6 +106,7 @@
 @green-620 : #1D9343;
 @green-710 : #32B618;
 @green-720 : #8DAB28;
+@green-730 : #35B37E;
 @green-810 : #08D34A;
 @green-820 : #C7E500;
 @green-830 : #08D34A;
@@ -118,6 +119,7 @@
 .green-620 { color: #fff; background-color: @green-620; }
 .green-710 { color: #fff; background-color: @green-710; }
 .green-720 { color: #fff; background-color: @green-720; }
+.green-730 { color: #fff; background-color: @green-730; }
 .green-810 { color: #fff; background-color: @green-810; }
 .green-820 { color: #fff; background-color: @green-820; }
 .green-830 { color: #fff; background-color: @green-830; }
