--- a/BrandingEmbold/css/common.less
+++ b/BrandingEmbold/css/common.less
@@ -104,7 +104,7 @@ h3.paragraph-title {
 	width: 180px;
 	height: 60px;
 	margin: 16px 0 0 0;
-	background-image: url('/svg/logo_embold_responsive.svg');
+	background-image: url('../svg/logo_embold_responsive.svg');
 	background-repeat: no-repeat;
 	background-size: 120%;
 	background-position: -35px 90%;
@@ -114,7 +114,7 @@ h3.paragraph-title {
 	width: 100%;
 	height: 225px;
 	border: 1px solid #e3e8ec;
-	background-image: url('/svg/logo_intergrated.svg');
+	background-image: url('../svg/logo_intergrated.svg');
 	background-repeat: no-repeat;
 	background-size: 58%;
 	background-position: center 0;
@@ -124,7 +124,7 @@ h3.paragraph-title {
 	width: 100%;
 	height: 120px;
 	border: 1px solid #e3e8ec;
-	background-image: url('/svg/logo_intergrated.svg');
+	background-image: url('../svg/logo_intergrated.svg');
 	background-repeat: no-repeat;
 	background-size: 240px;
 	background-position: center center;
@@ -135,7 +135,7 @@ h3.paragraph-title {
 	width: 100%;
 	height: 120px;
 	border: 1px solid #e3e8ec;
-	background-image: url('/svg/logo_intergrated.svg');
+	background-image: url('../svg/logo_intergrated.svg');
 	background-repeat: no-repeat;
 	background-size: 240px;
 	background-position: center -140px;
@@ -260,7 +260,7 @@ h3.paragraph-title {
 		width: 140px;
 		height: 60px;
 		margin: 16px 0 0 0;
-		background-image: url('/svg/logo_embold_responsive.svg');
+		background-image: url('../svg/logo_embold_responsive.svg');
 		background-repeat: no-repeat;
 		background-size: 300px;
 		background-position: -105px -420px;
@@ -292,7 +292,7 @@ h3.paragraph-title {
 		width: 40px;
 		height: 40px;
 		margin: 16px 0 0 0;
-		background-image: url('/svg/logo_embold_responsive.svg');
+		background-image: url('../svg/logo_embold_responsive.svg');
 		background-repeat: no-repeat;
 		background-size: 350px;
 		background-position: center -153px;
