--- a/BrandingEmbold/css/color.less
+++ b/BrandingEmbold/css/color.less
@@ -252,3 +252,117 @@
   color: #0f1c3a;
   background-color: #eae2f7;
 }
+
+
+
+
+.mint-900 {
+  color: #fff;
+  background-color: #00c1bc;
+}
+
+.mint-800 {
+  color: #fff;
+  background-color: #26c9c5;
+}
+
+.mint-700 {
+  color: #fff;
+  background-color: #4bd1ce;
+}
+
+.mint-600 {
+  color: #fff;
+  background-color: #71dad7;
+}
+
+.mint-500 {
+  color: #0f1c3a;
+  background-color: #97e2df;
+}
+
+.mint-400 {
+  color: #0f1c3a;
+  background-color: #bceae8;
+}
+
+.mint-300 {
+  color: #0f1c3a;
+  background-color: #e2f2f1;
+}
+
+
+
+
+
+.yellow-900 {
+  color: #fff;
+  background-color: #ffbd03;
+}
+
+.yellow-800 {
+  color: #fff;
+  background-color: #fec629;
+}
+
+.yellow-700 {
+  color: #fff;
+  background-color: #fcce4e;
+}
+
+.yellow-600 {
+  color: #fff;
+  background-color: #fbd774;
+}
+
+.yellow-500 {
+  color: #0f1c3a;
+  background-color: #fae099;
+}
+
+.yellow-400 {
+  color: #0f1c3a;
+  background-color: #f8e8be;
+}
+
+.yellow-300 {
+  color: #0f1c3a;
+  background-color: #f7f1e4;
+}
+
+
+
+.light-brown-900 {
+  color: #fff;
+  background-color: #c17a44;
+}
+
+.light-brown-800 {
+  color: #fff;
+  background-color: #ca8e60;
+}
+
+.light-brown-700 {
+  color: #fff;
+  background-color: #d3a17c;
+}
+
+.light-brown-600 {
+  color: #fff;
+  background-color: #dcb598;
+}
+
+.light-brown-500 {
+  color: #0f1c3a;
+  background-color: #e5c8b3;
+}
+
+.light-brown-400 {
+  color: #0f1c3a;
+  background-color: #eedbcf;
+}
+
+.light-brown-300 {
+  color: #0f1c3a;
+  background-color: #f7efeb;
+}
