--- a/BrandingEmbold/css/common.less
+++ b/BrandingEmbold/css/common.less
@@ -7,8 +7,8 @@ html { -webkit-font-smoothing: antialiased; }
 body {
 	font-family: 'Titillium Web', sans-serif;
 	font-weight: 400;
-	font-size:14px;
-	color:#a3b3c1;
+	font-size:16px;
+	color:#7a8da2;
 }
 
 p, h5 {
@@ -116,8 +116,8 @@ h3.paragraph-title {
 	border: 1px solid #e3e8ec;
 	background-image: url('../svg/logo_intergrated.svg');
 	background-repeat: no-repeat;
-	background-size: 58%;
-	background-position: center 0;
+	background-size: 500px;
+	background-position: center 30px;
 }
 
 .inverted-logo {
@@ -143,6 +143,10 @@ h3.paragraph-title {
 
 .border-gray {
 	border:1px solid #e6ebef;
+}
+
+.image-description {
+	text-align: center;
 }
 
 .color-box-header {
