--- a/BrandingEmbold/css/common.css
+++ b/BrandingEmbold/css/common.css
@@ -196,6 +196,90 @@
   color: #0f1c3a;
   background-color: #eae2f7;
 }
+.mint-900 {
+  color: #fff;
+  background-color: #00c1bc;
+}
+.mint-800 {
+  color: #fff;
+  background-color: #26c9c5;
+}
+.mint-700 {
+  color: #fff;
+  background-color: #4bd1ce;
+}
+.mint-600 {
+  color: #fff;
+  background-color: #71dad7;
+}
+.mint-500 {
+  color: #0f1c3a;
+  background-color: #97e2df;
+}
+.mint-400 {
+  color: #0f1c3a;
+  background-color: #bceae8;
+}
+.mint-300 {
+  color: #0f1c3a;
+  background-color: #e2f2f1;
+}
+.yellow-900 {
+  color: #fff;
+  background-color: #ffbd03;
+}
+.yellow-800 {
+  color: #fff;
+  background-color: #fec629;
+}
+.yellow-700 {
+  color: #fff;
+  background-color: #fcce4e;
+}
+.yellow-600 {
+  color: #fff;
+  background-color: #fbd774;
+}
+.yellow-500 {
+  color: #0f1c3a;
+  background-color: #fae099;
+}
+.yellow-400 {
+  color: #0f1c3a;
+  background-color: #f8e8be;
+}
+.yellow-300 {
+  color: #0f1c3a;
+  background-color: #f7f1e4;
+}
+.light-brown-900 {
+  color: #fff;
+  background-color: #c17a44;
+}
+.light-brown-800 {
+  color: #fff;
+  background-color: #ca8e60;
+}
+.light-brown-700 {
+  color: #fff;
+  background-color: #d3a17c;
+}
+.light-brown-600 {
+  color: #fff;
+  background-color: #dcb598;
+}
+.light-brown-500 {
+  color: #0f1c3a;
+  background-color: #e5c8b3;
+}
+.light-brown-400 {
+  color: #0f1c3a;
+  background-color: #eedbcf;
+}
+.light-brown-300 {
+  color: #0f1c3a;
+  background-color: #f7efeb;
+}
 * {
   box-sizing: border-box;
 }
@@ -205,8 +289,8 @@ html {
 body {
   font-family: 'Titillium Web', sans-serif;
   font-weight: 400;
-  font-size: 14px;
-  color: #a3b3c1;
+  font-size: 16px;
+  color: #7a8da2;
 }
 p,
 h5 {
@@ -316,8 +400,8 @@ h3.paragraph-title {
   border: 1px solid #e3e8ec;
   background-image: url('../svg/logo_intergrated.svg');
   background-repeat: no-repeat;
-  background-size: 58%;
-  background-position: center 0;
+  background-size: 500px;
+  background-position: center 30px;
 }
 .inverted-logo {
   width: 100%;
@@ -340,6 +424,9 @@ h3.paragraph-title {
 }
 .border-gray {
   border: 1px solid #e6ebef;
+}
+.image-description {
+  text-align: center;
 }
 .color-box-header {
   height: 86px;
