--- a/BrandEmbold/css/common.css
+++ b/BrandEmbold/css/common.css
@@ -502,20 +502,34 @@ h3.paragraph-title {
   height: 30px;
   padding: 0;
 }
-.color-tone .color-chip .step-100 {
-  opacity: 1;
+.color-tone .color-chip-primary-color {
+  width: 100%;
+  height: 120px;
+  margin-bottom: 20px;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.05);
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.05);
+  border: 0;
 }
-.color-tone .color-chip .step-070 {
-  opacity: 0.7;
+.color-tone .color-chip-primary-color .color-name {
+  display: block;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  font-weight: 600;
 }
-.color-tone .color-chip .step-050 {
-  opacity: 0.5;
+.color-tone .color-chip-primary-color .color-box-main {
+  width: 100%;
+  height: 100%;
+  padding: 16px;
 }
-.color-tone .color-chip .step-030 {
-  opacity: 0.3;
-}
-.color-tone .color-chip .step-000 {
-  opacity: 0;
+.color-tone .color-chip-primary-color .color-box-sub {
+  display: inline-block;
+  float: left;
+  width: 30px;
+  height: 30px;
+  padding: 0;
 }
 .color-tone .color-block:hover {
   -ms-transform: scale(1.12);
