--- a/BrandEmbold/css/common.less
+++ b/BrandEmbold/css/common.less
@@ -233,12 +233,39 @@ h3.paragraph-title {
 			height: 30px;
 			padding: 0;
 		}
+	}
 
-		.step-100 { opacity: 1; }
-		.step-070 { opacity: 0.7; }
-		.step-050 { opacity: 0.5; }
-		.step-030 { opacity: 0.3; }
-		.step-000 { opacity: 0; }
+	.color-chip-primary-color {
+		width: 100%;
+		height: 120px;
+		margin-bottom: 20px;
+		background-color: #fff;
+		-webkit-box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.05);
+			 -moz-box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.05);
+						box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.05);
+		border: 0;
+
+		.color-name {
+			display: block;
+			margin: 0;
+			padding: 0;
+			font-size: 16px;
+			font-weight: 600;
+		}
+
+		.color-box-main {
+			width: 100%;
+			height: 100%;
+			padding: 16px;
+		}
+
+		.color-box-sub {
+			display: inline-block;
+			float: left;
+			width: 30px;
+			height: 30px;
+			padding: 0;
+		}
 	}
 
 	.color-block:hover {
