--- a/BrandEmbold/css/color.less
+++ b/BrandEmbold/css/color.less
@@ -69,6 +69,10 @@
 }
 
 
+.blue-1000 {
+  color: #fff;
+  background-color: #004393;
+}
 
 .blue-900 {
   color: #fff;
@@ -106,6 +110,11 @@
 }
 
 
+
+.orange-1000 {
+  color: #fff;
+  background-color: #e85b15;
+}
 
 .orange-900 {
   color: #fff;
