--- a/BrandEmbold/css/common.css
+++ b/BrandEmbold/css/common.css
@@ -56,6 +56,10 @@
   color: #0f1c3a !important;
   background-color: #ffffff;
 }
+.blue-1000 {
+  color: #fff;
+  background-color: #004393;
+}
 .blue-900 {
   color: #fff;
   background-color: #004bb7;
@@ -83,6 +87,10 @@
 .blue-300 {
   color: #0f1c3a;
   background-color: #dfeff7;
+}
+.orange-1000 {
+  color: #fff;
+  background-color: #e85b15;
 }
 .orange-900 {
   color: #fff;
@@ -504,13 +512,14 @@ h3.paragraph-title {
 }
 .color-tone .color-chip-primary-color {
   width: 100%;
-  height: 120px;
+  height: 170px;
   margin-bottom: 20px;
   background-color: #fff;
-  -webkit-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.05);
-  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.05);
-  border: 0;
+  -webkit-box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.05);
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.05);
+  border: 1px solid #dfdfdf;
+  border-radius: 4px;
 }
 .color-tone .color-chip-primary-color .color-name {
   display: block;
@@ -521,8 +530,9 @@ h3.paragraph-title {
 }
 .color-tone .color-chip-primary-color .color-box-main {
   width: 100%;
-  height: 100%;
+  height: 120px;
   padding: 16px;
+  border-radius: 4px 4px 0 0;
 }
 .color-tone .color-chip-primary-color .color-box-sub {
   display: inline-block;
@@ -530,6 +540,12 @@ h3.paragraph-title {
   width: 30px;
   height: 30px;
   padding: 0;
+}
+.color-tone .color-chip-primary-color .color-chip-desc {
+  height: 40px;
+  padding: 14px;
+  font-size: 14px;
+  background-color: #fff;
 }
 .color-tone .color-block:hover {
   -ms-transform: scale(1.12);
