--- a/BrandEmbold/css/common.less
+++ b/BrandEmbold/css/common.less
@@ -237,13 +237,14 @@ h3.paragraph-title {
 
 	.color-chip-primary-color {
 		width: 100%;
-		height: 120px;
+		height: 170px;
 		margin-bottom: 20px;
 		background-color: #fff;
-		-webkit-box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.05);
-			 -moz-box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.05);
-						box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.05);
-		border: 0;
+		-webkit-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.05);
+			 -moz-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.05);
+						box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.05);
+		border: 1px solid #dfdfdf;
+		border-radius: 4px;
 
 		.color-name {
 			display: block;
@@ -255,8 +256,9 @@ h3.paragraph-title {
 
 		.color-box-main {
 			width: 100%;
-			height: 100%;
+			height: 120px;
 			padding: 16px;
+			border-radius: 4px 4px 0 0;
 		}
 
 		.color-box-sub {
@@ -265,6 +267,13 @@ h3.paragraph-title {
 			width: 30px;
 			height: 30px;
 			padding: 0;
+		}
+
+		.color-chip-desc {
+			height: 40px;
+			padding: 14px;
+			font-size: 14px;
+			background-color: #fff;
 		}
 	}
 
