--- a/BrandEmbold/css/embold-fonts-pack.css
+++ b/BrandEmbold/css/embold-fonts-pack.css
@@ -20,6 +20,9 @@ h1.title {
   margin-top: 24px;
   margin-bottom: 4px;
 }
+h4 {
+  margin-top: -13px;
+}
 .header-available-service {
   margin-top: 0;
   margin-bottom: 49px;
