--- a/BrandEmbold/css/embold-pack-benton.less
+++ b/BrandEmbold/css/embold-pack-benton.less
@@ -173,6 +173,51 @@ h5 {
 	font-size: 14px;
 }
 
+.btn-full-width {
+	color: #fff !important;
+	width: 100%;
+	margin-bottom: 8px !important;
+	padding: 24px 0 !important;
+	font-size: 24px !important;
+	text-decoration: none;
+	background-color: #004bb7;
+	border-radius: 6px !important;
+}
+
+.btn-full-width:hover {
+	background-color: #004393;
+}
+
+.screenshot-brand {
+	border: 1px solid #d7dfe3;
+}
+
+.ui-screens {
+	.screenshot {
+		margin-bottom: 24px;
+		border: 1px solid #d7dfe3;
+	}
+
+	.link-screenshot:nth-child(odd) {
+		float: left;
+	}
+
+	.link-screenshot:nth-child(even) {
+		float: right;
+	}
+}
+
+.link-screenshot {
+	display: inline-block;
+	width: 48%;
+}
+
+.ui-screens:after {
+	content: '';
+	display: block;
+	clear: both;
+}
+
 .ui-headings,
 .ui-paragraph {
 	border: 1px solid #efefef;
