--- a/BrandEmbold/css/embold-compare-fonts.css
+++ b/BrandEmbold/css/embold-compare-fonts.css
@@ -1,19 +1,83 @@
+@import url("https://use.typekit.net/rop6ibq.css");
 @import url("https://use.typekit.net/gua6lws.css");
 body {
   font-size: 14px;
+  padding: 24px;
 }
 b {
-  font-weight: 700;
+  font-weight: 600;
 }
-.font-upgrade {
+.navbar {
+  color: #fff;
+  width: 100%;
+  height: 68px;
+  background-color: #0f1c3a !important;
+  padding: 0 108px 0 32px;
+  top: 0;
+  left: 0;
+  position: fixed;
+  z-index: 999;
+  opacity: 0;
+}
+.navbar h1 {
+  color: #fff;
+  font-size: 24px;
+  height: 24px;
+}
+.navbar .section-header {
+  width: 47%;
+}
+.navbar .section-header:nth-child(odd) {
+  float: left;
+}
+.navbar .section-header:nth-child(even) {
+  float: right;
+  margin-right: 34px;
+}
+.navbar .section-header:nth-child(even):after {
+  content: '';
+  display: block;
+  clear: both;
+}
+.navbar-visible {
+  opacity: 1;
+}
+#navbar {
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+.font-benton {
   color: #334968;
   font-family: 'benton-sans', sans-serif;
   font-weight: 400;
   font-style: normal;
 }
+.font-benton .btn {
+  font-family: 'benton-sans', sans-serif;
+}
+.font-pack {
+  width: 47%;
+}
+.font-pack:nth-child(odd) {
+  float: left;
+}
+.font-pack:nth-child(even) {
+  float: right;
+}
+.font-sofia {
+  color: #334968;
+  font-family: 'sofia-pro', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.font-sofia .btn {
+  font-family: 'sofia-pro', sans-serif;
+}
 .container {
   position: relative;
-  width: 960px;
+  width: 100%;
   margin: auto;
 }
 h2,
@@ -28,25 +92,45 @@ h1 {
   font-weight: 600;
   margin-top: 16px;
   margin-bottom: 8px;
+  height: 70px;
 }
 h2 {
   color: #0f1c3a;
   font-size: 30px;
   margin: 18px 0 8px 0;
+  height: 40px;
 }
 h3 {
   font-size: 24px;
   margin: 4px 0 4px 0;
+  height: 30px;
 }
 h4 {
   color: #506682;
+  height: 30px;
   font-size: 20px;
   margin: 1.2em 0 0.6em 0;
 }
 h5 {
   color: #506682;
+  height: 25px;
   font-size: 17px;
   margin: 0.6em 0 0.6em 0;
+}
+/*-- block --*/
+.section-title {
+  height: 140px;
+}
+.section-fs {
+  top: 140px;
+  height: 900px;
+}
+.section-fs .fs-light,
+.section-fs .fs-regular,
+.section-fs .fs-bold,
+.section-fs .fs-italic,
+.section-fs .fs-bold-italic {
+  height: 60px;
 }
 .btn-back {
   position: absolute;
@@ -58,6 +142,7 @@ h5 {
 .header-available-media {
   margin-top: 8px;
   margin-bottom: 48px;
+  height: 24px;
 }
 .section-left {
   width: 48%;
@@ -70,7 +155,7 @@ h5 {
 .section {
   margin-bottom: 24px;
   padding-bottom: 16px;
-  border-bottom: 1px solid #efefef;
+  border-bottom: 1px solid #d7dfe3;
 }
 .section-last {
   margin-bottom: 24px;
@@ -89,6 +174,8 @@ h5 {
   font-size: 20px;
 }
 .fs .summary {
+  height: 45px;
+  top: 96px;
   font-size: 14px;
   padding: 18px;
   text-align: center;
@@ -98,11 +185,12 @@ h5 {
   display: inline-block;
   color: #a3b3c1;
   font-size: 12px;
-  font-weight: 500;
+  font-weight: 600;
   margin-bottom: 24px;
   padding-bottom: 2px;
   text-transform: uppercase;
   border-bottom: 1px solid #e3e8ec;
+  height: 24px;
 }
 .fs .description-last {
   margin-bottom: 0 !important;
@@ -111,13 +199,16 @@ h5 {
   margin-bottom: 4px;
 }
 .fs-light {
-  font-family: 'benton-sans', sans-serif;
-  font-weight: 200;
+  font-weight: 300;
+}
+.fs-regular {
+  font-weight: 400;
 }
 .fs-bold {
   font-weight: 600;
 }
 .fs-italic {
+  font-weight: 400;
   font-style: italic;
 }
 .fs-bold-italic {
@@ -127,16 +218,18 @@ h5 {
 .pm-paragraph {
   border: 1px solid #efefef;
   padding: 24px 30px;
+  height: 200px;
 }
 .pm-size-variation {
   border: 1px solid #efefef;
   padding: 24px 30px;
+  height: 420px;
 }
 .pm-size-variation .description {
   display: block;
   color: #a3b3c1;
   font-size: 12px;
-  font-weight: 500;
+  font-weight: 600;
   margin-bottom: 16px;
   text-transform: uppercase;
 }
@@ -192,26 +285,26 @@ h5 {
   display: block;
   clear: both;
 }
-.ui-headings,
-.ui-paragraph {
+.ui-headings {
+  height: 340px;
   border: 1px solid #efefef;
   padding: 24px;
 }
 .ui-headings h1,
-.ui-paragraph h1,
 .ui-headings h2,
-.ui-paragraph h2,
 .ui-headings h3,
-.ui-paragraph h3,
 .ui-headings h4,
-.ui-paragraph h4,
-.ui-headings h5,
-.ui-paragraph h5 {
+.ui-headings h5 {
   margin: 8px 0;
+  height: auto;
 }
-.ui-headings h1,
-.ui-paragraph h1 {
+.ui-headings h1 {
   margin-top: 0;
+}
+.ui-paragraph {
+  height: 180px;
+  border: 1px solid #efefef;
+  padding: 24px;
 }
 .h6 {
   margin-bottom: 8px;
@@ -230,7 +323,6 @@ h5 {
   margin-bottom: 0;
   font-size: 14px;
   font-weight: 400;
-  font-family: 'benton-sans', sans-serif;
   line-height: 1.42857143;
   text-align: center;
   white-space: nowrap;
@@ -346,6 +438,7 @@ h5 {
   margin-bottom: 8px;
   padding: 14px;
   border: 1px solid #e3e8ec;
+  height: 20px;
 }
 .ui-alert-success {
   border-left-color: #0ac940;
