--- a/BrandEmbold/css/embold-fonts-pack.css
+++ b/BrandEmbold/css/embold-fonts-pack.css
@@ -1,7 +1,6 @@
-@import url("https://use.typekit.net/boc6hvk.css");
-@import url("https://use.typekit.net/mwl7bmw.css");
 @import url("https://use.typekit.net/gua6lws.css");
 @import url("https://use.typekit.net/rop6ibq.css");
+@import url("https://use.typekit.net/cwa2ewg.css");
 * {
   box-sizing: border-box;
 }
@@ -99,6 +98,18 @@ h4 {
 }
 .sofia-pro {
   font-family: 'Sofia-pro', sans-serif;
+}
+.gill-sans {
+  font-family: 'Gill-Sans-Nova', sans-serif;
+}
+.proxima {
+  font-family: 'Proxima-Nova', sans-serif;
+}
+.montserrat {
+  font-family: 'Montserrat', sans-serif;
+}
+.acumin {
+  font-family: 'acumin-pro', sans-serif;
 }
 .section {
   padding-bottom: 24px;
