--- a/BrandEmbold/css/embold-fonts-pack.less
+++ b/BrandEmbold/css/embold-fonts-pack.less
@@ -1,8 +1,7 @@
 // out: embold-fonts-pack.css
-@import url("https://use.typekit.net/boc6hvk.css");
-@import url("https://use.typekit.net/mwl7bmw.css");
 @import url("https://use.typekit.net/gua6lws.css");
 @import url("https://use.typekit.net/rop6ibq.css");
+@import url("https://use.typekit.net/cwa2ewg.css");
 
 * {
   box-sizing: border-box;
@@ -120,6 +119,22 @@ h4 {
 
 .sofia-pro {
   font-family: 'Sofia-pro', sans-serif;
+}
+
+.gill-sans {
+  font-family: 'Gill-Sans-Nova', sans-serif;
+}
+
+.proxima {
+  font-family: 'Proxima-Nova', sans-serif;
+}
+
+.montserrat {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.acumin {
+  font-family: 'acumin-pro', sans-serif;
 }
 
 .section {
