--- a/embold.com/css/icons.less
+++ b/embold.com/css/icons.less
@@ -5,3 +5,6 @@
 .ic-door-open         { background-image: url('../images/ic-md-door-open.svg'); }
 .ic-star-glow         { background-image: url('../images/ic-md-star-glow.svg'); }
 .ic-gift-box          { background-image: url('../images/ic-md-gift-box.svg'); }
+.ic-cloud-code        { background-image: url('../images/ic-md-cloud-code.svg'); }
+.ic-servers           { background-image: url('../images/ic-md-servers.svg'); }
+.ic-building-big      { background-image: url('../images/ic-md-building-big.svg'); }
